Issue #765: Option to add time range implemented

--- a/examples/timeline/index.html
+++ b/examples/timeline/index.html
@@ -46,6 +46,7 @@
   <p><a href="33_custom_snapping.html">33_custom_snapping.html</a></p>
   <p><a href="34_add_custom_timebar.html">34_add_custom_timebar.html</a></p>
   <p><a href="35_item_ordering.html">35_item_ordering.html</a></p>
+  <p><a href="36_time_range.html">36_time_range.html</a></p>
   <p><a href="requirejs/requirejs_example.html">requirejs_example.html</a></p>
 
 </div>
